<resources>
    <string name="app_name">ZooDoKu</string>
    <string name="main_head">Android ZooDoKu</string>
    <string name="continue_but">Continue</string>
    <string name="new_game">New Game</string>
    <string name="about">About</string>
    <string name="exit_but">Exit</string>
    <string name="about_head">About SuDoKu</string>
    <string name="about_content">Sudoku is a logic-based number placement puzzle.
Starting with a partially completed 9x9 grid, the
objective is to fill the grid so that each
row, each column, and each of the 3x3 boxes
(also called <i>blocks</i>) contains the digits
1 to 9 exactly once.
    </string>
    <string name="settings_label">Settings.....</string>
    <string name="settings_title">ZooDoKu Settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_summary">Play background Music</string>
    <string name="music_title">Music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to New Game -->
    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>

    <!-- Strings related to Game Activity -->
    <string name="game_title">Game</string>
    <string name="no_moves_label">No moves</string>
    <string name="keypad_title">Keypad</string>



</resources>
