<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="game.com.zoodoku.MainMenu"
    android:weightSum="1"
    android:orientation="horizontal"
    android:background="@color/colorBGMain">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="367dp"
        android:layout_weight="0.47"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_head"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="25dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="@dimen/main_but_height"
            android:text="@string/continue_but"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="@dimen/main_but_height"
            android:text="@string/new_game"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="@dimen/main_but_height"
            android:text="@string/about"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="@dimen/main_but_height"
            android:text="@string/exit_but"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>
